# mojelektro-stats

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  codegen.yaml  hacs.json  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
cli/: __init__.py  __main__.py  _client.py  _format.py  _pager.py  _path.py  _resolve.py  meter.py  readings.py  types.py
custom_components/mojelektro/: __init__.py  _bootstrap.py  _naming.py  config_flow.py  const.py  coordinator.py  dispatcher.py  manifest.json
custom_components/mojelektro/lib/mojelektro/: __init__.py  _http.py  client.py  errors.py  models.py
custom_components/mojelektro/sinks/: __init__.py  _protocol.py  influxdb.py  statistics.py
custom_components/mojelektro/translations/: sl.json
custom_components/mojelektro_stats/: __init__.py  _bootstrap.py  _naming.py  config_flow.py  const.py  coordinator.py  dispatcher.py  manifest.json
custom_components/mojelektro_stats/lib/mojelektro_api/: __init__.py  _http.py  client.py  reading_types.py
custom_components/mojelektro_stats/sinks/: __init__.py  _protocol.py  influxdb.py  statistics.py
custom_components/mojelektro_stats/translations/: en.json  sl.json
docker/: Dockerfile.ha  compose.yaml
docker/ha-config/: .gitignore  configuration.yaml
docs/: README.md  development.md
docs/ai-rules/: README.md  cli.md  errors-and-logging.md  git-and-release.md  home-assistant.md  library.md  python.md  testing.md
scripts/: record-reading-types.py  regen-reading-types.py
tests/ha/: conftest.py  test_config_flow.py  test_coordinator.py  test_dispatcher.py  test_influxdb_sink.py  test_naming.py  test_setup.py  test_statistics_sink.py
tests/lib/: conftest.py  test_cli_exit_codes.py  test_cli_format.py  test_cli_pager.py  test_cli_resolve.py  test_cli_smoke.py  test_client.py  test_client_recorded.py  test_errors.py  test_http_translator.py  test_models.py  test_public_surface.py
tests/lib/cassettes/: README.md
tests/lib/cassettes/test_client_recorded/: test_recorded_merilna_tocka.yaml  test_recorded_merilno_mesto.yaml  test_recorded_meter_readings_window.yaml  test_recorded_reading_types.yaml
