# Moj Elektro — HACS Home Assistant integration
#
# The shipped product is custom_components/mojelektro/ (self-contained, no PyPI deps).
# This file configures developer tooling only: lint, typecheck, tests, and the
# optional repo-local CLI under cli/. Nothing here is published or installed into HA.

[project]
name = "mojelektro"
version = "0.0.0"
description = "Home Assistant HACS integration for Moj Elektro electricity data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false

[dependency-groups]
dev = [
  # CLI (cli/) — not part of the HACS install
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
  "questionary>=2.0",
  # Tests (tests/)
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-recording>=0.13",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "syrupy>=4.6",
  "freezegun>=1.5",
  "pytest-homeassistant-custom-component>=0.13; python_version >= '3.13'",
  # Lint + types
  "ruff>=0.5",
  "mypy>=1.10",
  "pyright>=1.1.370",
  "pre-commit>=3.7",
  "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "custom_components/mojelektro/lib"]
markers = ["ha: Home Assistant integration tests"]

[tool.coverage.run]
source = [
  "custom_components/mojelektro",
  "custom_components/mojelektro/lib/mojelektro",
  "cli",
]
omit = ["custom_components/mojelektro/lib/mojelektro/_generated/*"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.mypy]
python_version = "3.14"
strict = true
files = [
  "custom_components/mojelektro",
  "cli",
]
explicit_package_bases = true
namespace_packages = true
mypy_path = ["custom_components/mojelektro/lib", "."]

[[tool.mypy.overrides]]
module = ["custom_components.mojelektro.*"]
# - misc:        HA decorator typing; HA itself isn't fully strict-typed
# - attr-defined: HA exports some documented helpers via re-export without listing
#                 them in __all__ (e.g. recorder.util.get_instance).
disable_error_code = ["misc", "attr-defined"]

[tool.pyright]
include = [
  "custom_components/mojelektro",
  "cli",
]
extraPaths = ["custom_components/mojelektro/lib"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
